force-app/main/default/objects/Lead/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>